# fly_brain_clusterization

./: .gitignore  README.md  report.ipynb
classical_ml/: classification.ipynb
graph_clusterisation/clusterizer/: CMakeLists.txt  README.md  genetic_config
graph_clusterisation/clusterizer/app/: CMakeLists.txt  command_line.cpp  command_line.h  main.cpp
graph_clusterisation/clusterizer/src/: CMakeLists.txt
graph_clusterisation/clusterizer/src/algorithms/: common.cpp  common.h  genetic.cpp  genetic_algorithm.h  leiden.cpp  leiden_algorithm.h  louvain.cpp  louvain_algorithm.h
graph_clusterisation/clusterizer/src/data_structures/: community.cpp  community.h  genetic_config.h  graph.cpp  graph.h  nodes.cpp  nodes.h  partition.cpp  partition.h
graph_clusterisation/clusterizer/src/utils/: utils.cpp  utils.h
graph_clusterisation/graph_builder/: data_preparation.py  graph_builder.py  test.py
graph_clusterisation/graph_builder/application/: CMakeLists.txt  config_file  distances.cpp  distances.h  graph_builder.cpp  graph_builder.h  kernels.cpp  kernels.h  main.cpp
metric/: CMakeLists.txt  main.cpp  metric.cpp  metric.h
pattern_recognition/: CMakeLists.txt  main.cpp
pipeline/: algorithm  exponential  genetic_config  graph_builder  linear  metric  pipeline.py  quadratic  qubiq
pipeline/mel1/: gc-8-15-100-1-0.3-0.000001-3  gc-8-15-100-1-0.3-0.000001-6  gc-8-15-100-1-0.3-0.00001-3  gc-8-15-100-1-0.3-0.00001-6  gc-8-15-100-1-0.3-0.0001-3  gc-8-15-100-1-0.3-0.0001-6  gc-8-15-100-1-0.3-0.001-3  gc-8-15-100-1-0.3-0.001-6  gc-8-15-100-1-0.4-0.000001-3  gc-8-15-100-1-0.4-0.000001-6  gc-8-15-100-1-0.4-0.00001-3  gc-8-15-100-1-0.4-0.00001-6  gc-8-15-100-1-0.4-0.0001-3  gc-8-15-100-1-0.4-0.0001-6  gc-8-15-100-1-0.4-0.001-3  gc-8-15-100-1-0.4-0.001-6  gc-8-15-100-1-0.5-0.000001-3  gc-8-15-100-1-0.5-0.000001-6  gc-8-15-100-1-0.5-0.00001-3  gc-8-15-100-1-0.5-0.00001-6  gc-8-15-100-1-0.5-0.0001-3  gc-8-15-100-1-0.5-0.0001-6  gc-8-15-100-1-0.5-0.001-3  gc-8-15-100-1-0.5-0.001-6  gc-8-15-100-2-0.3-0.000001-3  gc-8-15-100-2-0.3-0.000001-6  gc-8-15-100-2-0.3-0.00001-3  gc-8-15-100-2-0.3-0.00001-6  gc-8-15-100-2-0.3-0.0001-3  gc-8-15-100-2-0.3-0.0001-6  gc-8-15-100-2-0.3-0.001-3  (+677 more)
visualizer/: partition  visualizer.ipynb
(+243 files in other folders)
